# elf_parser

./: .gitignore  .gitmodules  LICENSE  README.md  __version__.py  main.py  pyproject.toml  requirements.txt  test_rtos_parsing.py  test_simple.py
.trae/documents/: architecture_analysis.md  comprehensive_analysis_20260719.md  eliminate_remaining_special_cases_plan.md  eliminate_special_cases_plan.md  fix_rtos_display_issues_plan.md  gui_planning.md  multi_arch_qemu_continuation.md  multi_arch_qemu_finalization.md  multi_arch_qemu_remaining_work.md  multi_arch_qemu_scenarios.md  qemu_dump_parse_completion.md  qemu_real_firmware_dump.md  remove_special_cases_plan.md  verify_rtos_fixes_plan.md
core/: __init__.py  context.py  dump_reader.py  elf_parser.py  exceptions.py  plugin_manager.py  plugin_registry.py  profile_loader.py  profile_models.py  profile_registry.py
core/elf_parser/: __init__.py  base.py  dwarffi_parser.py  elftools_parser.py  gimli_parser.py  struct_accessor.py
core/utils/: linked_list.py  stack.py
display/: __init__.py  base.py  cli_basic.py  cli_interactive.py  cli_table.py  data_adapter.py  trace32_format.py  web_gui.py
plugins/: __init__.py  base.py
plugins/arch/: __init__.py  base.py
plugins/module/: __init__.py  assert_info.py  base.py  test_point.py
plugins/rtos/: __init__.py  base.py
profiles/: bss_simulated.yaml
scripts/: check_cache.py  check_die_offsets.py  check_die_offsets2.py  check_multiple_tx_thread.py  download_rust.py  download_rust_toolchain.py  find_lock.py  install_rust.py  install_rust_full.py  profile_performance.py
(+247 files in other folders)
